--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": "^7.3",
         "ext-gearman": "*",
 
-        "doctrine/common": "^2.10",
+        "doctrine/common": "^2.10|^3.1",
         "symfony/framework-bundle": "^4.4|^5.0",
         "symfony/http-kernel": "^4.4|^5.0",
         "symfony/console": "^4.4|^5.0",
